tests/api/reference/negative/12-map-eq-type.asm
const invalid: bool = map.eq(map.new(), 1)
